--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,9 +5,12 @@
 	<groupId>change.it</groupId>
 	<artifactId>core</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
 	<properties>
 		<maven.compiler.release>17</maven.compiler.release>
+		<javafx.version>21</javafx.version>
 	</properties>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -19,35 +22,32 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	
+
 	<dependencies>
 		<dependency>
-    		<groupId>com.google.guava</groupId>
-    		<artifactId>guava</artifactId>
-    		<version>32.1.3-jre</version>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>32.1.3-jre</version>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!--Libreria aggiunta-->
 		<dependency>
 			<groupId>org.fusesource.jansi</groupId>
-    		<artifactId>jansi</artifactId>
-    		<version>2.4.0</version>
+			<artifactId>jansi</artifactId>
+			<version>2.4.0</version>
 		</dependency>
-		<!--Libreria aggiunta-->
 		<dependency>
-        	<groupId>org.openjfx</groupId>
-        	<artifactId>javafx-controls</artifactId>
-        	<version>21</version>
-    	</dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>${javafx.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
-			<!-- Lanciare una specifica classe"-->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
@@ -56,34 +56,83 @@
 					<mainClass>it.univaq.disim.lpo.monopoli.core.Runner</mainClass>
 				</configuration>
 			</plugin>
-			<!-- Includere il plugin di test -->
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.2.5</version>
 			</plugin>
-        	
 			<plugin>
-            	<groupId>org.apache.maven.plugins</groupId>
-            		<artifactId>maven-compiler-plugin</artifactId>
-            		<version>3.8.1</version>
-            	<configuration>
-                	<source>23</source> 
-                	<target>11</target>
-            	</configuration>
-        	</plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<release>17</release>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.2.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>javadoc</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
-		<plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.2.0</version> <!-- versione stabile -->
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>javadoc</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-    </plugins>
-</build>
+	<profiles>
+		<profile>
+			<id>javafx-windows</id>
+			<activation>
+				<os>
+					<family>windows</family>
+				</os>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.openjfx</groupId>
+					<artifactId>javafx-controls</artifactId>
+					<classifier>win</classifier>
+					<version>${javafx.version}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+
+		<profile>
+			<id>javafx-mac</id>
+			<activation>
+				<os>
+					<family>mac</family>
+				</os>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.openjfx</groupId>
+					<artifactId>javafx-controls</artifactId>
+					<classifier>mac</classifier>
+					<version>${javafx.version}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+
+		<profile>
+			<id>javafx-linux</id>
+			<activation>
+				<os>
+					<family>unix</family>
+				</os>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.openjfx</groupId>
+					<artifactId>javafx-controls</artifactId>
+					<classifier>linux</classifier>
+					<version>${javafx.version}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
