--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,30 +24,60 @@
 	</dependencyManagement>
 
 	<dependencies>
+		<!--Google Guava-->
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>32.1.3-jre</version>
 		</dependency>
+		<!--Google Guava-->
+
+		<!--JUnit 5-->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!--JUnit 5-->
+
+		<!--Jansi-->
 		<dependency>
 			<groupId>org.fusesource.jansi</groupId>
 			<artifactId>jansi</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+		<!--Jansi-->
+
+		<!--JavaFX-->
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
 			<version>${javafx.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-fxml</artifactId>
+			<version>${javafx.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-base</artifactId>
+			<version>${javafx.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-graphics</artifactId>
+			<version>${javafx.version}</version>
+		</dependency>
+		<!--JavaFX-->
 	</dependencies>
 
 	<build>
 		<plugins>
+			<!-- Plugin per eseguire l'applicazione -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
@@ -56,10 +86,16 @@
 					<mainClass>it.univaq.disim.lpo.monopoli.core.Runner</mainClass>
 				</configuration>
 			</plugin>
+			<!-- Plugin per eseguire l'applicazione -->
+
+			<!-- Plugin per i test -->
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.2.5</version>
 			</plugin>
+			<!-- Plugin per i test -->
+
+			<!-- Plugin per compilare il codice Java -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -68,6 +104,9 @@
 					<release>17</release>
 				</configuration>
 			</plugin>
+			<!-- Plugin per compilare il codice Java -->
+
+			<!-- Plugin per la generazione della documentazione Javadoc -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -80,6 +119,22 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!-- Plugin per la generazione della documentazione Javadoc -->
+
+			<!-- Plugin per gestire JavaFX in Maven -->
+			<plugin>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>${javafx.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- Plugin per gestire JavaFX in Maven -->
 		</plugins>
 	</build>
 
